--- a/ninchatsdk/src/main/res/drawable/ninchat_ui_compose_select_button_selected.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_ui_compose_select_button_selected.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="@dimen/ninchat_button_corner_radius"
+        android:radius="20dp"
         />
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/ninchat_colorAccent" />
     <stroke
         android:width="2dp"
         android:color="@color/ninchat_colorAccent"
