Do not fade the scrollbar so that user can know there is something to scroll.

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_queue.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_queue.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ninchat_color_background_bottom"
-    tools:context=".activities.NinchatQueueActivity">
+    tools:context=".activities.NinchatQueueActivity"
+    android:fadeScrollbars="false">
 
     <LinearLayout
         android:orientation="vertical"
