--- a/ninchatsdk/src/main/res/layout/item_chat_multichoice_unselected.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_multichoice_unselected.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/ninchat_send_button_height"
-    style="@style/NinchatTheme.Button.MultiChoice"
+    style="@style/NinchatTheme.MultiChoice"
     tools:text="Option" />
