--- a/ninchatsdk/src/main/res/layout/activity_ninchat_media.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_media.xml
@@ -22,28 +22,30 @@
         android:layout_centerInParent="true"
         android:visibility="gone"/>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/ninchat_media_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/ninchat_media_activity_top_bar_height"
         android:layout_alignParentTop="true"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/ninchat_media_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/ninchat_media_activity_top_bar_file_name_margin"
+            android:maxLines="2"
             tools:text="File name"
+            android:ellipsize="end"
             android:autoLink="none"
-            android:layout_centerVertical="true"/>
+            android:layout_weight="1"/>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true">
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -76,10 +78,8 @@
                     android:layout_centerInParent="true" />
 
             </RelativeLayout>
-
         </LinearLayout>
-
-    </RelativeLayout>
+    </LinearLayout>
 
     <include
         android:id="@+id/ninchat_media_error"
