--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="ninchat_close_button_height">45dp</dimen>
     <dimen name="ninchat_send_button_height">35dp</dimen>
     <dimen name="ninchat_multichoice_button_corner_radius">20dp</dimen>
+    <dimen name="ninchat_multichoice_padding">5dp</dimen>
 
     <dimen name="ninchat_activity_top_matter_top_margin">48dp</dimen>
     <dimen name="ninchat_activity_top_matter_horizontal_margin">66dp</dimen>
@@ -47,6 +48,7 @@
     <dimen name="ninchat_chat_activity_action_icon_size">35dp</dimen>
     <dimen name="ninchat_chat_activity_send_text_padding">10dp</dimen>
     <dimen name="ninchat_chat_activity_video_view_height">256dp</dimen>
+    <dimen name="ninchat_chat_activity_video_view_height_small">166dp</dimen>
     <dimen name="ninchat_chat_activity_video_call_spinner_size">100dp</dimen>
     <dimen name="ninchat_chat_activity_video_control_padding">15dp</dimen>
     <dimen name="ninchat_chat_activity_video_control_icon_size">35dp</dimen>
