--- a/ninchatsdk/src/main/res/layout/text_field_error.xml
+++ b/ninchatsdk/src/main/res/layout/text_field_error.xml
@@ -1,11 +1,11 @@
 <EditText android:autofillHints="..."
     android:background="@drawable/ninchat_border_with_error"
-    android:id="@+id/multiline_text_area_error"
-    android:inputType="textMultiLine"
+    android:id="@+id/simple_text_field_error"
+    android:inputType="text|number|textEmailAddress|phone|textAutoComplete|textUri|textAutoCorrect"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_width="match_parent"
-    android:minHeight="70dp"
+    android:minHeight="40dp"
     tools:hint="Enter text"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android" />
