--- a/ninchatsdk/src/main/res/layout/radio_button_group.xml
+++ b/ninchatsdk/src/main/res/layout/radio_button_group.xml
@@ -1,9 +1,12 @@
 <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/checkbox_radio_btn_group"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
+    <include layout="@layout/radio_button" />
+    <include layout="@layout/radio_button" />
+    <include layout="@layout/radio_button" />
     <include layout="@layout/radio_button" />
 
 </RadioGroup>
