--- a/ninchatsdk/src/main/res/layout/text_area_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/text_area_with_label.xml
@@ -5,14 +5,12 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/simple_text_label"
+        android:id="@+id/multiline_text_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/ninchat_color_info_text"
-        tools:text="Element label" />
+        tools:text="Element label"/>
 
-    <include layout="@layout/text_field_ok"/>
-
-    <include layout="@layout/text_field_error"/>
+    <include layout="@layout/text_area_ok"/>
 </LinearLayout>
 
