--- a/ninchatsdk/src/main/res/layout/activity_ninchat_form_questionnaire.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_form_questionnaire.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/ninchat_color_background_bottom"
+    android:id="@+id/ninchat_preaudience_q_root"
+    tools:context=".activities.NinchatPreAudienceQuestionnaireActivity"
     android:fadeScrollbars="false">
 
 
@@ -11,6 +13,5 @@
         android:id="@+id/questionnaire_form_rview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:overScrollMode="never"
-        tools:itemCount="3"/>
-</ScrollView>
+        android:overScrollMode="never" />
+</RelativeLayout>
