--- a/ninchatsdk/src/main/res/layout/text_field_ok.xml
+++ b/ninchatsdk/src/main/res/layout/text_field_ok.xml
@@ -1,6 +1,6 @@
 <EditText android:autofillHints="..."
     android:background="@drawable/ninchat_border_with_ok"
-    android:id="@+id/simple_text_field_ok"
+    android:id="@+id/simple_text_field"
     android:inputType="text|number|textEmailAddress|phone|textAutoComplete|textUri|textAutoCorrect"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
