--- a/ninchatsdk/src/main/res/layout/item_chat_multichoice_selected.xml
+++ b/ninchatsdk/src/main/res/layout/item_chat_multichoice_selected.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:tools="http://schemas.android.com/tools"
+<TextView xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/NinchatTheme.MultiChoice.Selected"
+    android:id="@+id/text_view_options_label"
     tools:text="Option" />
