--- a/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/multichoice_with_label.xml
@@ -5,10 +5,11 @@
     android:orientation="vertical">
 
     <TextView
+        android:theme="@style/NinchatTheme.Questionnaire.Label"
+        android:layout_marginBottom="@dimen/margin_bottom"
         android:id="@+id/multichoice_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/ninchat_color_info_text"
         tools:text="Element label"/>
 
     <android.support.v7.widget.RecyclerView
