--- a/ninchatsdk/src/main/res/layout/radio_button_group.xml
+++ b/ninchatsdk/src/main/res/layout/radio_button_group.xml
@@ -4,10 +4,11 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:theme="@style/NinchatTheme.Questionnaire.Label"
+        android:layout_marginBottom="@dimen/margin_bottom"
         android:id="@+id/radio_button_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Element label"
-        android:textColor="@color/ninchat_color_info_text" />
+        android:text="Element label" />
 
 </RadioGroup>
