--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -92,4 +92,13 @@
     <dimen name="ninchat_chat_control_follow_button_height">70dp</dimen>
     <dimen name="ninchat_chat_control_follow_button_outer_margin">21dp</dimen>
     <dimen name="ninchat_chat_control_follow_button_width">180dp</dimen>
+
+
+    <!-- Questionnaire-->
+    <dimen name="margin_start">15dp</dimen>
+    <dimen name="margin_end">15dp</dimen>
+    <dimen name="margin_bottom">10dp</dimen>
+    <dimen name="items_margin">25dp</dimen>
+    <dimen name="label_text_size">20sp</dimen>
+
 </resources>
