Added form recycler view  - Multiline edit text style

--- a/ninchatsdk/src/main/res/layout/text_area_with_label.xml
+++ b/ninchatsdk/src/main/res/layout/text_area_with_label.xml
@@ -12,6 +12,6 @@
         android:layout_height="wrap_content"
         tools:text="Element label"/>
 
-    <include layout="@layout/text_area_ok"/>
+    <include layout="@layout/text_area"/>
 </LinearLayout>
 
