--- a/ninchatsdk/src/main/res/values/questionnaire_styles.xml
+++ b/ninchatsdk/src/main/res/values/questionnaire_styles.xml
@@ -20,4 +20,11 @@
         <item name="android:textColor">@color/ninchat_colorPrimary</item>
         <item name="android:textSize">@dimen/label_text_size</item>
     </style>
+
+    <style name="NinchatTheme.Questionnaire.InputText" parent="NinchatTheme.Questionnaire">
+        <item name="android:background">@drawable/ninchat_border_with_unfocus</item>
+        <item name="android:textColorHint">@color/ninchat_color_textarea_text</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
 </resources>
