--- a/ninchatsdk/src/main/res/layout/text_field.xml
+++ b/ninchatsdk/src/main/res/layout/text_field.xml
@@ -1,11 +1,12 @@
 <EditText android:autofillHints="..."
     style="@style/NinchatTheme.Questionnaire.InputText"
     android:id="@+id/simple_text_field"
-    android:inputType="text|number|textEmailAddress|phone|textAutoComplete|textUri|textAutoCorrect"
+    android:inputType="text"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:minHeight="40dp"
     tools:hint="Enter text"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    />
 
