--- a/ninchatsdk/src/main/res/layout/radio_button.xml
+++ b/ninchatsdk/src/main/res/layout/radio_button.xml
@@ -2,5 +2,7 @@
     android:layout_height="wrap_content"
     android:checked="true"
     android:text="Checkbox label"
+    android:layout_marginStart="8dp"
+    android:paddingStart="10dp"
     android:theme="@style/NinchatTheme.RadioButton"
     xmlns:android="http://schemas.android.com/apk/res/android" />
