--- a/ninchatsdk/src/main/res/layout/dropdown_list.xml
+++ b/ninchatsdk/src/main/res/layout/dropdown_list.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Spinner xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ninchat_dropdown_list"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-</Spinner>
+    android:layout_height="wrap_content"
+    android:background="@drawable/ninchat_dropdown_select_border"
+    android:orientation="horizontal">
+
+    <Spinner
+        android:id="@+id/ninchat_dropdown_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:overlapAnchor="false"
+        android:spinnerMode="dropdown" />
+</LinearLayout>
