--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -104,7 +104,7 @@
 
     <style name="NinchatTheme.Checkbox" parent="Theme.AppCompat.Light">
         <item name="android:colorControlActivated">@color/ninchat_colorAccent</item>
-        <item name="android:colorControlNormal">@android:color/white</item>
+        <item name="android:colorControlNormal">#A2A2A2</item>
     </style>
 
 
