Added form recycler view  - Control button

--- a/ninchatsdk/src/main/res/layout/activity_ninchat_form_questionnaire.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_form_questionnaire.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ninchat_preaudience_q_root"
-    tools:context=".activities.NinchatPreAudienceQuestionnaireActivity"
-    android:theme="@style/NinchatTheme.Questionnaire"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fadeScrollbars="false"
     android:paddingTop="10dp"
-    android:fadeScrollbars="false">
+    android:theme="@style/NinchatTheme.Questionnaire"
+    tools:context=".activities.NinchatPreAudienceQuestionnaireActivity">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/questionnaire_form_rview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start"
         android:layout_marginEnd="@dimen/margin_end"
         android:overScrollMode="never" />
