--- a/ninchatsdk/src/main/res/layout/control_buttons.xml
+++ b/ninchatsdk/src/main/res/layout/control_buttons.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <Button
@@ -11,9 +11,9 @@
         android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        tools:text="Back"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/ninchat_chat_control_follow_button_outer_margin" />
+        tools:text="Back"
+        android:layout_marginBottom="30dp"/>
 
     <Button
         android:id="@+id/ninchat_button_next"
@@ -21,8 +21,8 @@
         android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        tools:text="Continue"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/ninchat_chat_control_follow_button_outer_margin" />
+        tools:text="Continue"
+        android:layout_marginBottom="30dp"/>
 
 </RelativeLayout>
