Added form recycler view  - EditText with pattern match and focus change

--- a/ninchatsdk/src/main/res/layout/text_area.xml
+++ b/ninchatsdk/src/main/res/layout/text_area.xml
@@ -1,6 +1,7 @@
 <EditText xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/multiline_text_area"
+    android:theme="@style/NinchatTheme.Questionnaire.InputText.Cursor"
     style="@style/NinchatTheme.Questionnaire.InputText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
