--- a/ninchatsdk/src/main/res/layout/text_field.xml
+++ b/ninchatsdk/src/main/res/layout/text_field.xml
@@ -1,12 +1,14 @@
-<EditText android:autofillHints="..."
-    style="@style/NinchatTheme.Questionnaire.InputText"
-    android:id="@+id/simple_text_field"
-    android:inputType="text"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:minHeight="50dp"
-    tools:hint="Enter text"
+<EditText xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    />
+    android:id="@+id/simple_text_field"
+    android:theme="@style/NinchatTheme.Questionnaire.InputText.Cursor"
+    style="@style/NinchatTheme.Questionnaire.InputText"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:autofillHints="..."
+    android:inputType="text"
+    android:minHeight="50dp"
+    android:selectAllOnFocus="false"
+    android:singleLine="true"
+    tools:hint="Enter text" />
 
