--- a/ninchatsdk/src/main/res/drawable/ninchat_cursor.xml
+++ b/ninchatsdk/src/main/res/drawable/ninchat_cursor.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <size android:height="0dp" android:width="0dp"/>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <size android:width="3dp" />
+    <solid android:color="#FFFFFF" />
 </shape>
