--- a/ninchatsdk/src/main/res/layout/activity_ninchat_form_questionnaire.xml
+++ b/ninchatsdk/src/main/res/layout/activity_ninchat_form_questionnaire.xml
@@ -16,5 +16,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_start"
         android:layout_marginEnd="@dimen/margin_end"
-        android:overScrollMode="never" />
+        android:overScrollMode="never"
+        tools:itemCount="5"/>
 </RelativeLayout>
