--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -98,7 +98,7 @@
     <dimen name="margin_start">15dp</dimen>
     <dimen name="margin_end">15dp</dimen>
     <dimen name="margin_bottom">10dp</dimen>
-    <dimen name="items_margin">25dp</dimen>
+    <dimen name="items_margin_top">25dp</dimen>
     <dimen name="label_text_size">20sp</dimen>
     <dimen name="radio_btn_margin_start">8dp</dimen>
     <dimen name="radio_btn_padding_start">10dp</dimen>
