--- a/ninchatsdk/src/main/res/values/questionnaire_styles.xml
+++ b/ninchatsdk/src/main/res/values/questionnaire_styles.xml
@@ -37,4 +37,12 @@
         <item name="android:colorControlNormal">@color/checkbox_not_selected</item>
     </style>
 
+    <style name="NinchatTheme.Dropdown.Item" parent="Theme.AppCompat.Light">
+        <item name="android:divider">@color/checkbox_selected</item>
+        <item name="android:dividerHeight">0.5dp</item>
+    </style>
+
+    <style name="NinchatTheme.Dropdown.Spinner" parent="Theme.AppCompat.Light">
+        <item name="android:dropDownListViewStyle">@style/NinchatTheme.Dropdown.Item</item>
+    </style>
 </resources>
