--- a/ninchatsdk/src/main/res/values/styles.xml
+++ b/ninchatsdk/src/main/res/values/styles.xml
@@ -102,4 +102,6 @@
         <!--<item name="android:windowNoTitle">true</item>-->
     </style>
 
+    <style name="NinchatTheme.Radio.NotSelected" parent="NinchatTheme.MultiChoice" />
+
 </resources>
