--- a/ninchatsdk/src/main/res/layout/control_buttons.xml
+++ b/ninchatsdk/src/main/res/layout/control_buttons.xml
@@ -5,15 +5,38 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/ninchat_button_previous"
-        style="@style/NinchatTheme.Button.Dialog"
+    <ImageView
+        android:id="@+id/ninchat_image_button_previous"
+        style="@style/NinchatTheme.Button.Dialog.Close"
         android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="30dp"
-        tools:text="Back" />
+        android:src="@drawable/ninchat_icon_back"
+        android:tint="@color/ninchat_colorAccent" />
+
+    <ImageView
+        android:id="@+id/ninchat_image_button_next"
+        style="@style/NinchatTheme.Button.Dialog"
+        android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="30dp"
+        android:src="@drawable/ninchat_icon_next"
+        android:tint="@color/white" />
+
+    <Button
+        android:id="@+id/ninchat_button_previous"
+        style="@style/NinchatTheme.Button.Dialog.Close"
+        android:layout_width="@dimen/ninchat_chat_control_follow_button_width"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="30dp"
+        android:text="Back"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/ninchat_button_next"
@@ -22,7 +45,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center_horizontal"
-        tools:text="Continue"
-        android:layout_marginBottom="30dp"/>
+        android:layout_marginBottom="30dp"
+        android:text="Continue"
+        android:visibility="invisible" />
 
 </RelativeLayout>
