--- a/ninchatsdk/src/main/res/values/dimens.xml
+++ b/ninchatsdk/src/main/res/values/dimens.xml
@@ -99,6 +99,8 @@
     <dimen name="margin_end">15dp</dimen>
     <dimen name="margin_bottom">10dp</dimen>
     <dimen name="items_margin_top">25dp</dimen>
+    <dimen name="items_margin_left">15dp</dimen>
+    <dimen name="items_margin_right">15dp</dimen>
     <dimen name="label_text_size">20sp</dimen>
     <dimen name="radio_btn_margin_start">8dp</dimen>
     <dimen name="radio_btn_padding_start">10dp</dimen>
